--- a/carding.html
+++ b/carding.html
@@ -14,7 +14,8 @@
     .container{
         width: 100vw;
         height: 100vh;
-        background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+        background-color: #FFFFFF;
+        background-image: linear-gradient(62deg, #FFFFFF 0%, #6284FF 50%, #FF0000 100%);
         display: flex;
         justify-content: center;
         align-items: center;
